@@ -15,7 +15,7 @@ except ImportError:
 
 from persistent.dict import PersistentDict
 from persistent.list import PersistentList
-from eea.daviz.config import ANNO_VIEWS, ANNO_FACETS, ANNO_JSON
+from eea.daviz.config import ANNO_VIEWS, ANNO_FACETS, ANNO_JSON, ANNO_SOURCES
 
 class Configure(object):
     """ Get daviz configuration
@@ -39,6 +39,13 @@ class Configure(object):
             facets = anno[ANNO_FACETS] = PersistentList()
         return facets
 
+    def _sources(self):
+        anno = IAnnotations(self.context)
+        sources = anno.get(ANNO_SOURCES, None)
+        if sources is None:
+            sources = anno[ANNO_SOURCES] = PersistentList()
+        return sources
+
     def _json(self):
         anno = IAnnotations(self.context)
         json = anno.get(ANNO_JSON, None)
@@ -61,6 +68,13 @@ class Configure(object):
         """
         anno = IAnnotations(self.context)
         return anno.get(ANNO_FACETS, [])
+
+    @property
+    def sources(self):
+        """ Return daviz external sources
+        """
+        anno = IAnnotations(self.context)
+        return anno.get(ANNO_SOURCES, [])
 
     def set_json(self, value):
         """ Set json dict
@@ -92,6 +106,15 @@ class Configure(object):
             if facet.get('name') != key:
                 continue
             return facet
+        return default
+
+    def source(self, key, default=None):
+        """ Return source by given key
+        """
+        for source in self.sources:
+            if source.get('name') != key:
+                continue
+            return source
         return default
     #
     # View mutators
@@ -164,3 +187,39 @@ class Configure(object):
         """
         anno = IAnnotations(self.context)
         anno[ANNO_FACETS] = PersistentList()
+    #
+    # Source mutators
+    #
+    def add_source(self, name, **kwargs):
+        """ Add source
+        """
+        config = self._sources()
+        kwargs.update({'name': name})
+        kwargs.setdefault('type', u'json')
+        source = PersistentDict(kwargs)
+        config.append(source)
+        return source.get('name', '')
+
+    def delete_source(self, key):
+        """ Delete source by given key
+        """
+        config = self._sources()
+        for index, source in enumerate(config):
+            if source.get('name', '') == key:
+                config.pop(index)
+                return
+        raise KeyError, key
+
+    def edit_source(self, key, **kwargs):
+        """ Edit source properties
+        """
+        source = self.source(key)
+        if not source:
+            raise KeyError, key
+        source.update(kwargs)
+
+    def delete_sources(self):
+        """ Remove all sources
+        """
+        anno = IAnnotations(self.context)
+        anno[ANNO_SOURCES] = PersistentList()
