@@ -4,8 +4,21 @@
   i18n:domain="eea.daviz">
 
 <metal:jsslot fill-slot="javascript_head_slot">
+
+  <!-- Custom babel-translators -->
+  <!--<link rel="exhibit/babel-translator"
+    tal:attributes="href string:${here/absolute_url}/@@daviz-translator" />-->
+
   <link rel="exhibit/data" type="application/json"
     tal:attributes="href string:${here/absolute_url}/@@daviz-view.json" />
+
+  <tal:additional repeat="source python:view.sources">
+  <link rel="exhibit/data"
+    tal:attributes="
+    type string:application/${source/type};
+    href string:${source/name};
+    ex:converter python:source.get('converter', None) or None;" />
+  </tal:additional>
 
   <!-- include exhibit api -->
   <script type="text/javascript">
