@@ -7,3 +7,4 @@ __credits__ = """contributions: Alec Ghica, Alin Voinea"""
 ANNO_VIEWS = 'eea.daviz.config.views'
 ANNO_FACETS = 'eea.daviz.config.facets'
 ANNO_JSON = 'eea.daviz.config.json'
+ANNO_SOURCES = 'eea.daviz.config.sources'
