@@ -19,7 +19,7 @@ class IExhibitTileEdit(Interface):
         title=u"Lens template",
         description=(u""
             "Edit custom exhibit lens. Leave it blank to use the default one. "
-            "See more about Lens Templates at "
+            "See more details "
             "http://www.simile-widgets.org/wiki/Exhibit/Lens_Templates"),
         required=False
     )
