@@ -8,7 +8,17 @@ Changelog
 1.3-dev - (unreleased)
 ----------------------
 
-* Feature:Added editable 'Lens' property to Tiles view in order to easily create
+* TODO: In order to speed up rdf+xml conversion to JSON add a custom
+  converter instead of using the babel one.
+
+* TODO: Add/Remove facets as right now they are generated from uploaded file,
+  and you can only sort and hide them.
+
+* Feature: Possibility to add external exhibit data sources like
+  "Google Spreadsheet", "RDF/XML" and "External JSON".
+  [voineali #4416]
+
+* Feature: Added editable 'Lens' property to Tiles view in order to easily create
   custom Exhibit Lens Templates
   [voineali #4414]
 
